[gd_scene load_steps=5 format=2]

[ext_resource path="res://levels/map_test.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/npc/npc.tscn" type="PackedScene" id=5]
[ext_resource path="res://game.gd" type="Script" id=6]

[node name="Game" type="Node2D"]
visible = false
script = ExtResource( 6 )

[node name="Map" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 631, 530 )

[node name="TimerGunCooldown" type="Timer" parent="Player"]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="UI" type="CanvasLayer" parent="Player"]

[node name="Enemies" type="Node2D" parent="."]

[node name="Npc" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 1075, 443 )

[node name="Npc2" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 353, 617 )

[connection signal="shoot_projectile" from="Player" to="." method="_on_shoot_projectile"]
[connection signal="timeout" from="Player/TimerGunCooldown" to="." method="_on_TimerCooldown_timeout"]
